--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.31.0",
     "i18next": "^23.11.2",
     "ky": "^1.2.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-i18next": "^14.1.0",
     "react-native": "0.74.1",
@@ -64,6 +65,7 @@
     "reactotron-react-native": "^5.1.6",
     "reactotron-react-native-mmkv": "^0.2.6",
     "reactotron-react-query": "^1.0.4",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
   },
   "engines": {
