--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-ble-manager": "^11.5.5",
     "react-native-ble-plx": "^3.2.1",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "^3.9.0-rc.1",
     "react-native-safe-area-context": "^4.10.1",
