--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@tanstack/react-query": "^5.31.0",
+    "buffer": "^6.0.3",
     "i18next": "^23.11.2",
     "ky": "^1.2.4",
     "nativewind": "^2.0.11",
