--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "^2.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv": "^2.12.2",
+    "react-native-peripheral": "^0.0.3",
     "react-native-reanimated": "^3.9.0-rc.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
